Fixed ugly read indicators in dark mode

--- a/root/app/calibre-web/cps/static/css/caliBlur_override.css
+++ b/root/app/calibre-web/cps/static/css/caliBlur_override.css
@@ -8,10 +8,10 @@ body.serieslist.grid-view div.container-fluid > div > div.col-sm-10::before {
   left: 0;
   color: #fff;
   background-color: #cc7b19;
-  border-radius: 0;
-  padding: 0 8px;
+  border-radius: 100px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
-  line-height: 24px;
+  margin-left: 4px;
+  margin-top: 4px;
 }
 
 .cover {
@@ -19,8 +19,14 @@ body.serieslist.grid-view div.container-fluid > div > div.col-sm-10::before {
 }
 
 .cover .read {
-  padding: 0 0;
   line-height: 15px;
+  font-size: xx-small;
+  position: relative;
+  top: -20px;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  padding: 2px !important;
 }
 
 input.datepicker {color: transparent}
